# data_migration_agent

./: .coverage  .env  .gitignore  Databricks_MCP.py  Fabric_MCP.py  Fabric_MCP_README.md  MCP_Streamlit_Client_Documentation.md  SQL_MCP.py  Snowflake_MCP.py  Snowflake_MCP_README.md  WebSearch_MCP.py  azure_devops_mcp_wiki_page.md  azure_devops_tasks_report.csv  bak_databricks_mcp.py  check_snowflake_permissions.py  complete_migration_plan.py  coverage.xml  customer_dashboard.html  customer_orders_dashboard.html  data_migration_agent.code-workspace  direct_migration.py  execute_migration.py  fabric_requirements.txt  main.py  mcp_streamlit_client.py  mcp_streamlit_client_bak.py  requirements.txt  requirements_databricks.txt  requirements_websearch.txt  run_migration.py  setup_snowflake_schema.py  snowflake_requirements.txt  sql_to_snowflake_migration.py  terraform_mcp_azure_guide.md  test_databricks_timeout.py  test_fabric_mcp.py  test_mcp_timeout.py  test_snowflake_connection.py  test_snowflake_mcp.py  test_sql_mcp.py  (+1 more)
agent/: migration_agent.py  test_azure_devops_mcp.py
config/: config.yaml  fabric_config.yaml  mcp_bak.json  snowflake_config.yaml
containerized-mcp-servers/: README.md
databricks-mcp-server/: .pre-commit-config.yaml  BUILD_AND_DISTRIBUTION.md  CONTRIBUTING.md  CROSS_PLATFORM_VALIDATION.md  DEVELOPMENT.md  DEVELOPMENT_INTEGRATION.md  DEVELOPMENT_SETUP.md  DEVELOPMENT_WORKFLOW.md  ENVIRONMENT_VARIABLES.md  INTEGRATION_TESTING.md  Makefile  PRE_PUBLICATION_CHECKLIST.md  PUBLICATION_GUIDE.md  README.md  TROUBLESHOOTING.md  cross_platform_validation_report.json  cross_platform_validation_report.py  demo_error_handling.py  pyproject.toml  pytest.ini  run_integration_tests.py  test_cross_platform.py  test_cross_platform_simple.py  validate_cross_platform.py
databricks-mcp-server/.github/workflows/: build.yml  development.yml  release.yml  validate-distribution.yml
databricks-mcp-server/config/: config.yaml.example
databricks-mcp-server/scripts/: build.py  bump_version.py  dev_test.py  local_test_workflow.py  setup_dev.py  test_publication.py  validate_distribution.py
databricks-mcp-server/src/databricks_mcp_server/: __init__.py  config.py  errors.py  main.py  server.py
databricks-mcp-server/tests/: __init__.py  conftest.py  test_build_distribution.py  test_config.py  test_cross_platform.py  test_distribution_workflow.py  test_error_handling.py  test_integration.py  test_main.py  test_package_validation.py  test_server.py
examples/: example_usage.py
mappings/: column_mapping.json
mcp_client/: client.py
mcp_server/: qa_server.py  server.py
server/: Databricks_MCP.py  SQL_MCP.py
sqlserver-mcp-local/: README-USAGE.md  README.md  docker-run.bat  docker-run.sh  test-connection.bat  test-startup.bat
sqlserver-mcp-native/: requirements.txt  sqlserver_mcp_native.py
testing_script/: azure_devops-mcp_test.py  azure_devops_final_mcp.py  azure_devops_kiro_direct.py  azure_devops_kiro_mcp.py  azure_devops_mcp_server.py  diagrams_test.py  (+12 more)
(+102 files in other folders)
